force-app/main/default/objects/AuthProviderSettings__c/AuthProviderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AuthProviderSettings</label>
</CustomObject>