force-app/main/default/objects/AuthProviderSettings__c/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <label>access token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>