force-app/main/default/objects/AuthProviderSettings__c/fields/LinkedDate__c.field-meta.xml
<CustomField>
    <fullName>LinkedDate__c</fullName>
    <description>Used to display linked date</description>
    <label>LinkedDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>