force-app/main/default/objects/AuthProviderSettings__c/fields/WorkingStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkingStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be used to tell weather integration is in active stage or not.</description>
    <label>WorkingStatus</label>
    <type>Checkbox</type>
</CustomField>